# Zappi_API

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  createtable.sql  dailyEV.c  getUP.c  parseD.c  parseJ.c  parseJ.h  parseZ.c  sample.json  stat.json  weeklyEV  zappi.cfg.sample
www/: EVd.html  EVw.html  README  README.md  install.sh  myEVdChart.js  myEVwChart.js
www/Chartjs/: README
